<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Capstone</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="my_home_information">Information</string>
    <string name="there_is_and_earthquake">"There is and earthquake."</string>
    <string name="warning_mitigation_step_1">Protect your head</string>
    <string name="warning_mitigation_step_2">Take cover under the table</string>
    <string name="warning_mitigation_step_3">Get close to the strong part of the building structure</string>
    <string name="warning_mitigation_step_4">Find an exit</string>
    <string name="warning_hazard">HAZARD</string>

    <string name="tab_title_status">Status</string>
    <string name="tab_title_my_home">My Home</string>

    <string name="during_1_keyword_1">Taking cover under a table</string>
    <string name="during_1_keyword_2">Cover your head</string>
    <string name="during_1_keyword_3">Find an exit</string>
    <string name="during_1_keyword_4">When safe, exit immediately</string>

    <string name="during_3_keyword_2">Use the emergency stairs</string>
    <string name="during_3_keyword_3">Use the interphone</string>

    <string name="during_4_keyword_1">Follow the evacuation instructions</string>

    <string name="during_5_keyword_1">Go straight to the open field</string>

    <string name="during_step_1">The shock will be felt for a while.
        During that time, seek your own safety by taking cover under a table to avoid falling objects and glass windows.
        Cover your head, or stand under a door. When you feel safe, immediately run out of the building.</string>

    <string name="during_step_2">Identify parts of the building that have a strong structure, such as the corners of buildings and columns.</string>

    <string name="during_step_3">Do not use the elevator if you feel it is shaking.
        Use the emergency stairs to evacuate out of the building.
        When in the elevator, press all buttons or use the interphone to call the building manager.</string>

    <string name="during_step_4">If you are in a building with security personnel, follow the evacuation instructions.</string>


    <string name="post_2_keyword_1">Evacuate yourself</string>
    <string name="post_2_keyword_2">Pay attention to the ruins that are dangerous</string>

    <string name="post_3_keyword_1">Stand in an open area</string>
    <string name="post_3_keyword_2">Avoid areas prone to landslides</string>

    <string name="post_step_1">Stay alert for aftershocks.</string>

    <string name="post_step_2">When inside a building, evacuate yourself after the earthquake has stopped.
        Pay attention to the ruins and objects that are dangerous during the evacuation.</string>

    <string name="post_step_3">Stand in an open area away from buildings and electrical and water installations.
        If it is outside the building with cliffs around it, avoid areas prone to landslides.</string>

    <string name="safe_area">Safe area.</string>
    <string name="standby">STANDBY</string>
    <string name="what_to_do_about_it">What to do about it ?</string>
    <string name="step_mitigation">STEP MITIGATION</string>
    <string name="icon">icon</string>
    <string name="now">Now</string>
    <string name="sr">SR</string>
    <string name="gempa_proximity">Gempa Proximity</string>

    <string name="password">Password</string>
    <string name="btn_login">Login</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="btn_register">REGISTER</string>
    <string name="register">Register</string>
    <string name="sign_up">SIGN UP</string>
    <string name="already_have_an_account_login_here">ALREADY HAVE AN ACCOUNT? LOGIN HERE</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string-array name="land_surface_condition">
        <item>n (natural)</item>
        <item>o (ocean)</item>
        <item>t (trench)</item>
    </string-array>

    <string-array name="foundation_type">
        <item>h</item>
        <item>l</item>
        <item>r</item>
        <item>u</item>
        <item>w</item>
    </string-array>

    <string-array name="roof_type">
        <item>n</item>
        <item>q</item>
        <item>x</item>
    </string-array>

    <string-array name="ground_floor_type">
        <item>f</item>
        <item>m</item>
        <item>v</item>
        <item>x</item>
        <item>z</item>
    </string-array>

    <string-array name="other_floor_type">
        <item>j</item>
        <item>q</item>
        <item>s</item>
        <item>x</item>
    </string-array>

    <string-array name="position">
        <item>j</item>
        <item>0</item>
        <item>s</item>
        <item>t</item>
    </string-array>

    <string-array name="plan_configuration">
        <item>a</item>
        <item>c</item>
        <item>d</item>
        <item>f</item>
        <item>m</item>
        <item>o</item>
        <item>q</item>
        <item>s</item>
        <item>u</item>
    </string-array>

    <string-array name="legal_ownership_status">
        <item>a</item>
        <item>r</item>
        <item>v</item>
        <item>w</item>
    </string-array>

    <string name="richter_scale">%d</string>

</resources>